Added binomial, onesample t-test, z-test and applied gitignore to cache

--- a/CVM Conversion criterions.ipynb
+++ b/CVM Conversion criterions.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c96a948e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2c4977d0",
    "metadata": {},
    "outputs": [],
@@ -49,9 +49,7 @@
     "import numpy as np\n",
     "import scipy.stats as st\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns; sns.set_style('white')\n",
-    "\n",
-    "from ab_utils.standard_values import z_value, t_value"
+    "import seaborn as sns; sns.set_style('white')"
    ]
   },
   {
@@ -88,14 +86,18 @@
    "id": "95d43259",
    "metadata": {},
    "source": [
-    "### 1.1.1. Сравнение конверсии в группе с константой. Биномиальный тест\n",
+    "### 1.1.1. Сравнение конверсии в группе с константой. **Биномиальный тест**\n",
     "\n",
-    "#### Проверяемые гипотезы\n",
+    "#### Проверяемые гипотезы (двусторонняя гипотеза)\n",
     "$$\n",
     "H_0: p = p_0 \\\\\n",
     "H_1: p <> p_0\n",
     "$$\n",
     "где $p$ - конверсия в экспериментальной группе, $p_0$ - константа, с которой необходимо сравнить конверсию\n",
+    "\n",
+    "#### Условия применимости критерия\n",
+    "1. Результаты экспериментов - независимые испытания Бернулли\n",
+    "2. Не требует большого размера выборки $n$, критерий работает при малых конверсиях $p$\n",
     "\n",
     "#### Статистика критерия\n",
     "Статистикой критерия является количество успехов $k$ в $n$ испытаниях. При верности $H_0$ статистика имеет биномиальное распределение с параметрами $n$ и $p_0$. $k ~ Binomial(n, p_0)$. \n",
@@ -105,33 +107,360 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f666b38f",
+   "metadata": {},
+   "source": [
+    "**Тренировочная задача №1**\n",
+    "\n",
+    "**Условие:** представим, что историческая конверсия в целевое действие у сегмента равна $p_0 = 0.7$%. Мы отправляем выборке из 1000 клиентов СМС с призывом совершить целевое действие. После эксперимента мы выяснили, что в экспериментальной группе в целевое действие сконвертировалось 14 клиентов.\n",
+    "\n",
+    "**Задача:** сравнить конверисю в экспериментальной группе ($p$) с исторической конверсией по сегменту ($p_0$) при помощи **Биномиального теста** и сделать вывод о том значимы ли различия на уровне значимости $alpha = 0.05$\n",
+    "\n",
+    "Проверяемые гипотезы (двусторонняя гипотеза, $p$ не равна $p_0$):\n",
+    "$$\n",
+    "H_0: p = 0.007 \\\\\n",
+    "H_1: p <> 0.007 \\\\\n",
+    "$$\n",
+    "\n",
+    "Проверяемые гипотезы (односторонняя гипотеза, $p$ больше $p_0$):\n",
+    "$$\n",
+    "H_0: p \\le 0.007 \\\\\n",
+    "H_1: p > 0.007 \\\\\n",
+    "$$\n",
+    "\n",
+    "Проверяемые гипотезы (односторонняя гипотеза, $p$ меньше $p_0$):\n",
+    "$$\n",
+    "H_0: p \\ge 0.007 \\\\\n",
+    "H_1: p < 0.007 \\\\\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "aeccf4a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ab_utils.binomial_test import binomial_p_value, binomial_p_value_manual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "da7771d3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Наблюдаемая конверсия: 1.4%\n",
+      "Ожидаемая конверсия (H0): 0.7%\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1000          # количество пользователей (испытаний)\n",
+    "k = 14            # число конверсий (успехов)\n",
+    "p0 = 0.007        # ожидаемая конверсия 0.7% = 0.007\n",
+    "alpha = 0.05      # уровень значимости alpha\n",
+    "\n",
+    "p = k / n\n",
+    "print(f\"Наблюдаемая конверсия: {p:.1%}\")\n",
+    "print(f\"Ожидаемая конверсия (H0): {p0:.1%}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "898b8988",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Альтернатива: two-sided\n",
+      "p-value (scipy):  0.019676; Гипотеза H_0 (p 1.4% равна p_0 0.7%) отвергается на уровне 0.05 в пользу H_1 (p 1.4% НЕ равна p_0 0.7%): да\n",
+      "p-value (manual): 0.019676\n",
+      "\n",
+      "Альтернатива: less\n",
+      "p-value (scipy):  0.994456; Гипотеза H_0 (p 1.4% больше либо равна p_0 0.7%) отвергается на уровне 0.05 в пользу H_1 (p 1.4% меньше p_0 0.7%): нет\n",
+      "p-value (manual): 0.994456\n",
+      "\n",
+      "Альтернатива: greater\n",
+      "p-value (scipy):  0.012514; Гипотеза H_0 (p 1.4% меньше либо равна p_0 0.7%) отвергается на уровне 0.05 в пользу H_1 (p 1.4% больше p_0 0.7%): да\n",
+      "p-value (manual): 0.012514\n"
+     ]
+    }
+   ],
+   "source": [
+    "alt_to_h_zero = {\n",
+    "    'two-sided': f'p {round(p * 100.0, 1)}% равна p_0 {round(p0 * 100.0, 1)}%',\n",
+    "    'less': f'p {round(p * 100.0, 1)}% больше либо равна p_0 {round(p0 * 100.0, 1)}%',\n",
+    "    'greater': f'p {round(p * 100.0, 1)}% меньше либо равна p_0 {round(p0 * 100.0, 1)}%'\n",
+    "}\n",
+    "\n",
+    "alt_to_h_one = {\n",
+    "    'two-sided': f'p {round(p * 100.0, 1)}% НЕ равна p_0 {round(p0 * 100.0, 1)}%',\n",
+    "    'less': f'p {round(p * 100.0, 1)}% меньше p_0 {round(p0 * 100.0, 1)}%',\n",
+    "    'greater': f'p {round(p * 100.0, 1)}% больше p_0 {round(p0 * 100.0, 1)}%'\n",
+    "}\n",
+    "\n",
+    "for alt in ['two-sided', 'less', 'greater']:\n",
+    "    p_scipy = binomial_p_value(k, n, p0, alternative = alt)\n",
+    "    p_manual = binomial_p_value_manual(k, n, p0, alternative = alt)\n",
+    "\n",
+    "    print(f\"\\nАльтернатива: {alt}\")\n",
+    "    print(f\"p-value (scipy):  {p_scipy:.6f}; Гипотеза H_0 ({alt_to_h_zero[alt]}) отвергается на уровне {alpha} в пользу H_1 ({alt_to_h_one[alt]}): {'да' if p_scipy < alpha else 'нет'}\")\n",
+    "    print(f\"p-value (manual): {p_manual:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5348f88b",
+   "metadata": {},
+   "source": [
+    "### 1.1.2. Сравнение конверсии в группе с константой. **Одновыборочный T-тест**\n",
+    "\n",
+    "#### Проверяемые гипотезы (двусторонняя гипотеза)\n",
+    "$$\n",
+    "H_0: \\mu = \\mu_0 \\\\\n",
+    "H_1: \\mu <> \\mu_0\n",
+    "$$\n",
+    "где $\\mu$ - среднее в экспериментальной группе, $\\mu_0$ - константа, с которой необходимо сравнить среднее\n",
+    "\n",
+    "#### Условия применимости критерия\n",
+    "1. Наблюдения независимы\n",
+    "2. Выборка из нормального распределения, либо $n$ достаточно велико ($n > 100$), чтобы (согласно ЦПТ) среднее было нормально распределено\n",
+    "\n",
+    "#### Статистика критерия\n",
+    "Пусть\n",
+    "- $\\bar{X}$ - выборочное среднее (среднее в экспериментальной группе),\n",
+    "- $s^2$ - несмещённая дисперсия,\n",
+    "- $n$ - размер выборки.\n",
+    "\n",
+    "Статистикой критерия является:\n",
+    "\n",
+    "$$\n",
+    "t = \\frac{\\bar{X} - \\mu_0}{s / \\sqrt{n}}\n",
+    "$$\n",
+    "\n",
+    "При верности нулевой гипотезы $H_0$ статистика критерия имеет распределение Стьюдента с $n - 1$ степенями свободы:\n",
+    "\n",
+    "$$\n",
+    "t \\sim T_{n-1}\n",
+    "$$\n",
+    "\n",
+    "#### Расчёт p-value\n",
+    "$p-value$ (вероятность получить такое же или более экстремальное значение статистики) равно:\n",
+    "\n",
+    "Для двусторонней альтернативы:\n",
+    "$$\n",
+    "p = 2 \\times Probability(T_{n-1} \\ge |t|)\n",
+    "$$\n",
+    "\n",
+    "Для односторонней альтернативы (больше):\n",
+    "$$\n",
+    "p = Probability(T_{n-1} \\ge t)\n",
+    "$$\n",
+    "\n",
+    "Для односторонней альтернативы (меньше):\n",
+    "$$\n",
+    "p = Probability(T_{n-1} \\le t)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3442bef1",
+   "metadata": {},
+   "source": [
+    "**Тренировочная задача №2**\n",
+    "\n",
+    "Возьмём условие **тренировочной задачи №1**, но теперь для сравнения используем **Одновыборочный Т-тест**. **Одновыборочный Т-тест** может быть применён так как $n = 1000$ (достаточно велико для применения ЦПТ).\n",
+    "\n",
+    "**Условие:** Историческая конверсия в целевое действие у сегмента равна $p_0 = \\mu_0 = 0.7$%. Мы отправляем выборке из 1000 клиентов СМС с призывом совершить целевое действие. После эксперимента мы выяснили, что в экспериментальной группе в целевое действие сконвертировалось 14 клиентов.\n",
+    "\n",
+    "**Задача:** сравнить конверисю в экспериментальной группе ($p$, которое равно $\\mu$) с исторической конверсией по сегменту ($p_0$, которое равно $\\mu_0$) при помощи **одновыборочного Т-теста** и сделать вывод о том значимы ли различия на уровне значимости $alpha = 0.05$\n",
+    "\n",
+    "Проверяемые гипотезы (двусторонняя гипотеза, $\\mu$ не равна $\\mu_0$):\n",
+    "$$\n",
+    "H_0: \\mu = 0.007 \\\\\n",
+    "H_1: \\mu <> 0.007 \\\\\n",
+    "$$\n",
+    "\n",
+    "Проверяемые гипотезы (односторонняя гипотеза, $\\mu$ больше $\\mu_0$):\n",
+    "$$\n",
+    "H_0: \\mu \\le 0.007 \\\\\n",
+    "H_1: \\mu > 0.007 \\\\\n",
+    "$$\n",
+    "\n",
+    "Проверяемые гипотезы (односторонняя гипотеза, $\\mu$ меньше $\\mu_0$):\n",
+    "$$\n",
+    "H_0: \\mu \\ge 0.007 \\\\\n",
+    "H_1: \\mu < 0.007 \\\\\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "16455441",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from ab_utils.t_test import onesample_p_value, onesample_p_value_manual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bf9a201f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Наблюдаемая конверсия: 1.4%\n",
+      "Ожидаемая конверсия (H0): 0.7%\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1000          # количество пользователей (испытаний)\n",
+    "k = 14            # число конверсий (успехов)\n",
+    "mu0 = 0.007        # ожидаемая конверсия 0.7% = 0.007\n",
+    "alpha = 0.05      # уровень значимости alpha\n",
+    "\n",
+    "mu = k / n\n",
+    "print(f\"Наблюдаемая конверсия: {mu:.1%}\")\n",
+    "print(f\"Ожидаемая конверсия (H0): {mu0:.1%}\")\n",
+    "\n",
+    "# Создаём массив, в котором 14 клиентов из 1000 конвертировалось в целевое действие\n",
+    "x_arr = np.zeros(n)\n",
+    "x_arr[:k] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d95f15d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Альтернатива: two-sided\n",
+      "p-value (scipy):  0.059974; Гипотеза H_0 (p 1.4% равна p_0 0.7%) отвергается на уровне 0.05 в пользу H_1 (p 1.4% НЕ равна p_0 0.7%): нет\n",
+      "p-value (manual): 0.059974\n",
+      "\n",
+      "Альтернатива: less\n",
+      "p-value (scipy):  0.970013; Гипотеза H_0 (p 1.4% больше либо равна p_0 0.7%) отвергается на уровне 0.05 в пользу H_1 (p 1.4% меньше p_0 0.7%): нет\n",
+      "p-value (manual): 0.970013\n",
+      "\n",
+      "Альтернатива: greater\n",
+      "p-value (scipy):  0.029987; Гипотеза H_0 (p 1.4% меньше либо равна p_0 0.7%) отвергается на уровне 0.05 в пользу H_1 (p 1.4% больше p_0 0.7%): да\n",
+      "p-value (manual): 0.029987\n"
+     ]
+    }
+   ],
+   "source": [
+    "alt_to_h_zero = {\n",
+    "    'two-sided': f'p {round(p * 100.0, 1)}% равна p_0 {round(p0 * 100.0, 1)}%',\n",
+    "    'less': f'p {round(p * 100.0, 1)}% больше либо равна p_0 {round(p0 * 100.0, 1)}%',\n",
+    "    'greater': f'p {round(p * 100.0, 1)}% меньше либо равна p_0 {round(p0 * 100.0, 1)}%'\n",
+    "}\n",
+    "\n",
+    "alt_to_h_one = {\n",
+    "    'two-sided': f'p {round(p * 100.0, 1)}% НЕ равна p_0 {round(p0 * 100.0, 1)}%',\n",
+    "    'less': f'p {round(p * 100.0, 1)}% меньше p_0 {round(p0 * 100.0, 1)}%',\n",
+    "    'greater': f'p {round(p * 100.0, 1)}% больше p_0 {round(p0 * 100.0, 1)}%'\n",
+    "}\n",
+    "\n",
+    "for alt in ['two-sided', 'less', 'greater']:\n",
+    "    p_scipy = onesample_p_value(x_arr, mu0, alternative = alt)[0]\n",
+    "    p_manual = onesample_p_value_manual(x_arr, mu0, alternative = alt)[0]\n",
+    "\n",
+    "    print(f\"\\nАльтернатива: {alt}\")\n",
+    "    print(f\"p-value (scipy):  {p_scipy:.6f}; Гипотеза H_0 ({alt_to_h_zero[alt]}) отвергается на уровне {alpha} в пользу H_1 ({alt_to_h_one[alt]}): {'да' if p_scipy < alpha else 'нет'}\")\n",
+    "    print(f\"p-value (manual): {p_manual:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f26335d3",
+   "metadata": {},
+   "source": [
+    "**Обратите внимание** на результат **Одновыборочного Т-теста** при тестировании двусторонней гипотезы - результат отличается от результата **Биномиального теста**. При таких маленьких конверсиях, **Одновыборочный Т-тест** не подходит, так как не выполняется требование о нормальном распределении среднего. Как проверять корректность выбранного критерия будет рассказано в секции \"3. Проверка корректности выбора критерия\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b94c4e1",
+   "metadata": {},
+   "source": [
+    "### 1.2.1. Сравнение больших конверсий между группами. **Z-тест для пропорций (Z-test)**\n",
+    "\n",
+    "#### Проверяемые гипотезы (двусторонняя гипотеза)\n",
+    "$$\n",
+    "H_0: p_1 = p_2 \\\\\n",
+    "H_1: p_1 <> p_2\n",
+    "$$\n",
+    "где $p_1$ - значение конверсии в экспериментальной группе, $p_2$ - значение конверсии в контрольной группе\n",
+    "\n",
+    "#### Условия применимости критерия\n",
+    "1. Испытания независимы\n",
+    "2. $n_1 \\times \\hat{p_1} \\ge 50$, $n_1 \\times (1 - \\hat{p_1}) \\ge 50$, $n_2 \\times \\hat{p_2} \\ge 50$, $n_2 \\times (1 - \\hat{p_1}) \\ge 50$. В противном случае лучше применять \"Точный тест Фишера\"\n",
+    "\n",
+    "#### Статистика критерия\n",
+    "Пусть\n",
+    "- $x_1$, $x_2$ - количество успехов,\n",
+    "- $n_1$, $n_2$ - размеры выборок,\n",
+    "- $\\hat{p_1} = \\frac{x_1}{n_1}$, $\\hat{p_2} = \\frac{x_2}{n_2}$,\n",
+    "- объединённая пропорция $\\hat{p} = \\frac{x_1 + x_2}{n_1 + n_2}$.\n",
+    "\n",
+    "Статистикой критерия является:\n",
+    "\n",
+    "$$\n",
+    "z = \\frac{\\hat{p_1} - \\hat{p_2}}{\\sqrt{\\hat{p} \\times (1 - \\hat{p}) \\times (\\frac{1}{n_1} + \\frac{1}{n_2})}}\n",
+    "$$\n",
+    "\n",
+    "При верности нулевой гипотезы $H_0$ статистика критерия имеет нормальное распределение со средним равным $0$ и стандартным отклонением равным $1$:\n",
+    "\n",
+    "$$\n",
+    "z \\sim N(0, 1)\n",
+    "$$\n",
+    "\n",
+    "#### Расчёт p-value\n",
+    "$p-value$ (вероятность получить такое же или более экстремальное значение статистики) равно:\n",
+    "\n",
+    "Для двусторонней альтернативы:\n",
+    "$$\n",
+    "p = 2 \\times Probability(N(0, 1) \\ge |z|)\n",
+    "$$\n",
+    "\n",
+    "Для односторонней альтернативы (больше):\n",
+    "$$\n",
+    "p = Probability(N(0, 1) \\ge z)\n",
+    "$$\n",
+    "\n",
+    "Для односторонней альтернативы (меньше):\n",
+    "$$\n",
+    "p = Probability(N(0, 1) \\le z)\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf9a201f",
+   "id": "0da36927",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -139,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d95f15d2",
+   "id": "9834126a",
    "metadata": {},
    "outputs": [],
    "source": []
