Added example for z-test

--- a/CVM Conversion criterions.ipynb
+++ b/CVM Conversion criterions.ipynb
@@ -75,7 +75,7 @@
     "    - Одновыборочный T-тест (One-sample T-test)\n",
     "2. Сравнение больших конверсий между группами:\n",
     "    - Z-тест для пропорций (Z-test)\n",
-    "    - Двухвыборочный T-тест (Welch's T-test)\n",
+    "    - Двухвыборочный T-тест Уэлча (Welch's T-test)\n",
     "3. Сравнение малых конверсий между группами:\n",
     "    - Точный тест Фишера (Fisher's Exact Test)\n",
     "    - Бутстрап (Bootstrap) (применим ко всем трём задачам)"
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "16455441",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bf9a201f",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
    "source": [
     "n = 1000          # количество пользователей (испытаний)\n",
     "k = 14            # число конверсий (успехов)\n",
-    "mu0 = 0.007        # ожидаемая конверсия 0.7% = 0.007\n",
+    "mu0 = 0.007       # ожидаемая конверсия 0.7% = 0.007\n",
     "alpha = 0.05      # уровень значимости alpha\n",
     "\n",
     "mu = k / n\n",
@@ -458,9 +458,133 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f1b6c9aa",
+   "metadata": {},
+   "source": [
+    "**Тренировочная задача №3**\n",
+    "\n",
+    "**Условие:** мы проверяем эффективность Push-уведомления. Целевым действием является подписка на сервис в течение трёх дней. Мы разделили сегмент на две группы, экспериментальную и контрольную, размер каждой - 5 тысяч клиентов. Экспериментальная группа получила Push-уведомление, контрольная - ничего не получала. После проведения эксперимента мы измерили количество клиентов, подписавшихся на сервис: в контрольной группе оно составило 328 клиентов, а в экспериментальной - 472 клиента.\n",
+    "\n",
+    "**Задача:** сравнить конверисю в экспериментальной группе ($p_1$) с конверсией в контрольной группе ($p_2$) при помощи **Z-теста для пропорций** и сделать вывод о том значимы ли различия на уровне значимости $alpha = 0.05$\n",
+    "\n",
+    "Проверяемые гипотезы (двусторонняя гипотеза, $p_1$ не равна $p_2$):\n",
+    "$$\n",
+    "H_0: p_1 = p_2 \\\\\n",
+    "H_1: p_1 <> p_2 \\\\\n",
+    "$$\n",
+    "\n",
+    "Проверяемые гипотезы (односторонняя гипотеза, $p_1$ больше $p_2$):\n",
+    "$$\n",
+    "H_0: p_1 \\le p_2 \\\\\n",
+    "H_1: p_1 > p_2 \\\\\n",
+    "$$\n",
+    "\n",
+    "Проверяемые гипотезы (односторонняя гипотеза, $p_1$ меньше $p_2$):\n",
+    "$$\n",
+    "H_0: p_1 \\ge p_2 \\\\\n",
+    "H_1: p_1 < p_2 \\\\\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b4c10834",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ab_utils.z_test import ztest_prop_p_value, ztest_prop_p_value_manual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0da36927",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Конверсия в экспериментальной группе: 7.700%\n",
+      "Конверсия в контрольной группе (H0): 6.560%\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = 5000          # количество пользователей (испытаний) в экспериментальной группе\n",
+    "n2 = 5000          # количество пользователей (испытаний) в контрольной группе\n",
+    "\n",
+    "x1 = 385          # количество успехов в экспериментальной группе\n",
+    "x2 = 328          # количество успехов в контрольной группе\n",
+    "alpha = 0.05      # уровень значимости alpha\n",
+    "\n",
+    "p1 = float(x1) / n1     # Конверсия в экспериментальной группе\n",
+    "p2 = float(x2) / n2     # Конверсия в контрольной группе\n",
+    "\n",
+    "print(f\"Конверсия в экспериментальной группе: {p1:.3%}\")\n",
+    "print(f\"Конверсия в контрольной группе (H0): {p2:.3%}\")\n",
+    "\n",
+    "# Создаём массив, для каждой группы\n",
+    "x1_arr = np.zeros(n1)\n",
+    "x1_arr[:x1] = 1\n",
+    "\n",
+    "x2_arr = np.zeros(n2)\n",
+    "x2_arr[:x2] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9834126a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Альтернатива: two-sided\n",
+      "p-value (statsmodels):  0.026716; Гипотеза H_0 (p_1 7.7% равна p_2 6.6%) отвергается на уровне 0.05 в пользу H_1 (p_1 7.7% НЕ равна p_2 6.6%): да\n",
+      "p-value (manual): 0.026754\n",
+      "\n",
+      "Альтернатива: less\n",
+      "p-value (statsmodels):  0.986642; Гипотеза H_0 (p_1 7.7% больше либо равна p_2 6.6%) отвергается на уровне 0.05 в пользу H_1 (p_1 7.7% меньше p_2 6.6%): нет\n",
+      "p-value (manual): 0.986623\n",
+      "\n",
+      "Альтернатива: greater\n",
+      "p-value (statsmodels):  0.013358; Гипотеза H_0 (p_1 7.7% меньше либо равна p_2 6.6%) отвергается на уровне 0.05 в пользу H_1 (p_1 7.7% больше p_2 6.6%): да\n",
+      "p-value (manual): 0.013377\n"
+     ]
+    }
+   ],
+   "source": [
+    "alt_to_h_zero = {\n",
+    "    'two-sided': f'p_1 {round(p1 * 100.0, 1)}% равна p_2 {round(p2 * 100.0, 1)}%',\n",
+    "    'less': f'p_1 {round(p1 * 100.0, 1)}% больше либо равна p_2 {round(p2 * 100.0, 1)}%',\n",
+    "    'greater': f'p_1 {round(p1 * 100.0, 1)}% меньше либо равна p_2 {round(p2 * 100.0, 1)}%'\n",
+    "}\n",
+    "\n",
+    "alt_to_h_one = {\n",
+    "    'two-sided': f'p_1 {round(p1 * 100.0, 1)}% НЕ равна p_2 {round(p2 * 100.0, 1)}%',\n",
+    "    'less': f'p_1 {round(p1 * 100.0, 1)}% меньше p_2 {round(p2 * 100.0, 1)}%',\n",
+    "    'greater': f'p_1 {round(p1 * 100.0, 1)}% больше p_2 {round(p2 * 100.0, 1)}%'\n",
+    "}\n",
+    "\n",
+    "for alt in ['two-sided', 'less', 'greater']:\n",
+    "    p_scipy = ztest_prop_p_value(x1_arr = x1_arr, x2_arr = x2_arr, alternative = alt)[0]\n",
+    "    p_manual = ztest_prop_p_value_manual(x1 = x1, n1 = n1, x2 = x2, n2 = n2, alternative = alt)[0]\n",
+    "\n",
+    "    print(f\"\\nАльтернатива: {alt}\")\n",
+    "    print(f\"p-value (statsmodels):  {p_scipy:.6f}; Гипотеза H_0 ({alt_to_h_zero[alt]}) отвергается на уровне {alpha} в пользу H_1 ({alt_to_h_one[alt]}): {'да' if p_scipy < alpha else 'нет'}\")\n",
+    "    print(f\"p-value (manual): {p_manual:.6f}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0da36927",
+   "id": "64f0532c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -468,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9834126a",
+   "id": "a5ca6e9d",
    "metadata": {},
    "outputs": [],
    "source": []
