--- a/CVM Conversion criterions.ipynb
+++ b/CVM Conversion criterions.ipynb
@@ -958,6 +958,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a242a53",
+   "metadata": {},
+   "source": [
+    "### 1.3.2. Сравнение малых конверсий между группами. **Бутстрап (Bootstrap)**\n",
+    "\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "518103aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29dc3542",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5032f577",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "ddd94de0",
    "metadata": {},
    "source": [
